# bonjour-moderne

./: .clang-format  .gitmodules  CMakeLists.txt  README.md  sonar-project.properties
cmake/: cmake-utils.cmake
example/: main.cpp
include/: bonjour_moderne.h
include/bonjour_moderne/: advertisable_service.h  advertised_service.h  bonjour_moderne.h  daemon_api_version.h  discoverable_service.h  discovered_service.h  resolved_service.h  service_advertiser.h  service_browser.h  service_domain.h  service_fullname.h  service_host.h  service_hostname.h  service_interface.h  service_name.h  service_port.h  service_protocol.h  service_resolver.h  service_txt_record.h  service_type.h
source/: bonjour_moderne.cpp  daemon_api_version.cpp  dns_service.cpp  dns_service.h  service_advertiser.cpp  service_browser.cpp  service_domain.cpp  service_fullname.cpp  service_host.cpp  service_hostname.cpp  service_interface.cpp  service_name.cpp  service_port.cpp  service_protocol.cpp  service_resolver.cpp  service_txt_record.cpp  service_type.cpp  shared_resource.h  string.cpp  string.h
tests/: main.cpp
